# dotman

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-for-release.yml  continuous-integration.yml
src/: args.rs  config.rs  deploy.rs  filesystem.rs  handlebars_helpers.rs  init.rs  main.rs  watch.rs
