[package]
name = "dotman"
version = "0.13.3"
authors = ["FaceFTW <alex@faceftw.dev>"]
description = "A dotfile manager and templater written in rust, forked from SuperCuber/dotter"
edition = "2024"
repository = "https://github.com/FaceFTW/dotman"
readme = "README.md"
keywords = ["dotter", "dotfiles", "manager", "cli"]
categories = ["command-line-utilities"]
license = "Apache 2.0 License"
rust-version = "1.85"

[dependencies]
anyhow = "1.*"
clap = { version = "4.5.*", features = ["derive"] }
clap_complete = "4.5.*"
crossterm = "0.29"
diff = "0.1.*"
handlebars = "6.*"
hostname = "0.4.*"
log = "0.4.*"
maplit = "1.*"
serde = { version = "1.*", features = ["derive"] }
shellexpand = { version = "3.*", features = ["base-0"] }
simplelog = "0.12.*"
toml = "0.8.*"

[features]
default = ["scripting"]
scripting = ["handlebars/script_helper"]

[dependencies.handlebars_misc_helpers]
version = "0.17.*"
default-features = false
features = ["string", "json"]

[dev-dependencies]
mockall = "0.13.1"
# Enable this instead for better failure messages (on nightly only)
# mockall = { version = "0.9.*", features = ["nightly"] }

[target.'cfg(windows)'.dependencies]
dunce = "1.*"

[target.'cfg(unix)'.dependencies]
libc = "0.2.137"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
